--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*
+{
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -18,6 +24,25 @@ header {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+footer {
+  width: 100%;
+  background-color: #0f2027;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+footer a
+{
+  color: gray;
+}
+
+footer a:hover
+{
+  color: rgb(156, 156, 156);
 }
 
 .logo {
@@ -154,6 +179,7 @@ button:hover {
 a
 {
   color: violet;
+  font-family: 'Poppins', sans-serif;
 }
 
 a:hover
